components/envoy/envoy.yml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              cors:
                allow_origin_string_match:
                - safe_regex:
                    regex: ".*"
                allow_methods: GET, PUT, POST, DELETE, OPTIONS
                allow_headers: Origin, Content-Type, Accept, Authorization, traceparent
                expose_headers: Authorization
              routes:
              - match:
                  prefix: "/api"
                route:
                  cluster: cruddur-be-flask
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              http_service:
                server_uri:
                  uri: authz-http-service
                  cluster: authz-http-service
                  timeout: 0.250s
                authorization_response:
                  allowed_upstream_headers:
                    patterns:
                      - exact: x-cognito-username
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors                      
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: cruddur-be-flask
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cruddur-be-flask
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: cruddur-be-flask
                port_value: 4567
  - name: authz-http-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: authz-http-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: authz-http-service
                port_value: 9002
